# neurocipher-platform

./: .gitignore  Makefile  README.md  THIRD_PARTY_NOTICES.md  WARP.md  openapi.yaml
.github/: copilot-instructions.md
.github/agents/: my-agent.architecture-documentation.md
.github/instructions/: documentation.instructions.md  infrastructure.instructions.md  python.instructions.md  schemas.instructions.md
.github/workflows/: docs.yml  lint.yml  reusable_ci.yml
Architecture-Docs/: OpenAPI.yaml.md  Project Instructions.md  System Architecture Blueprint.md
Architecture-Docs/docs/: Missing Docs.md  architecture.md
docs/: CAP-001-Capacity-Model.md  Missing-Docs.md  Project Instructions.md  System-Architecture-Blueprint.md  architecture.md
docs/adr/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006-Security-and-Identity.md  ADR-007-Data-Lifecycle-and-Retention.md  ADR-008-Testing-and-Quality-Gates.md  ADR-009-Cost-Control-and-Autoscaling.md  ADR-010-Disaster-Recovery-and-Backups.md  ADR-011-Performance-and-Cost-Evaluation-and-Governance-Record.md  ADR-013-Security-Engine-Boundary-and-Contracts.md
docs/api-ops/: API-001-Edge-and-Gateway-Architecture.md  API-002-Service-Contracts-and-Versioning.md  API-Error-Catalog.md  OPS-001-CICD-Environments-and-SRE-Ops.md
docs/architecture/: ARC-001-Platform-Context-and-Boundaries.md  ARC-002-Data-Pipeline-Architecture-Blueprint.md  Data-Pipeline-Architecture.md  System-Architecture-Blueprint.md  container-diagram.mmd  context-diagram.mmd
docs/capacity-performance/: CAP-001-Capacity-and-Performance-Model-Specification.md
docs/ci/: CI-001-Pipeline-Architecture-and-Orchestration.md  CI-002-Deployment-Strategy-and-Rollback.md  CI-003-Infrastructure-as-Code-Policy-and-Environment-Governance.md
docs/data-contracts/: DCON-001-Data-Contract-Specification.md
docs/data-models/: DCON-001-Data-Contract-Specification.md  DM-001-Canonical-Data-Model.md  DM-002-Logical-Entity-Relationship-Model.md  DM-003-Physical-Schemas-and-Storage-Map.md  DM-004-Event-Schemas-and-Contracts.md  DM-005-Governance-Versioning-and-Migrations.md  Data-Models-Catalog.md
docs/data-quality/: DQ-001-Data-Quality-Gates-Specification.md
docs/dev/: DB-LOCAL-TESTING.md
docs/dr/: DR-001-Disaster-Recovery-Plan.md
docs/governance/: GOV-001.md  GOV-002.md  GOV-ARCH-001-Architecture-Documentation-Index.md  GOV-MIG-001 Monorepo Migration Checklist.md  REF-001-Glossary-and-Standards-Catalog.md  REF-002-Platform-Constants.md
docs/ingestion/: ING-001-Raw-Ingestion-Spec-1.md  ING-002-Normalization-and-Dedup-Spec.md  ING-003-Enrichment-Routing-and-Persistence.md
docs/lakehouse/: LAK-001-Lakehouse-Layout-Iceberg-S3.md
docs/lineage/: LIN-001-Data-Lineage-and-Catalog-Specification.md
docs/observability/: CAP-001-Capacity-and-Scalability-Model.md  OBS-001-Observability-Strategy-and-Telemetry-Standards.md  OBS-002-Monitoring-Dashboards-and-Tracing.md  OBS-003-Alerting-SLOs-and-Incident-Response.md
docs/performance-cost/: COST-001-FinOps-Governance-and-Cloud-Cost-Optimization-Policy-V2.md  PERF-001-Performance-and-Cost-Management-Specification-V2.md  PERF-002-Benchmark-Results-and-Performance-Validation-Log.md  PERF-003-Continuous-Performance-Monitoring-and-Optimization-Framework-V2.md  (+2 more)
docs/product/: PRD-001-Neurocipher-Platform-Vision-and-Scope.md  (+1 more)
infra/: README.md
libs/: README.md
libs/python/nc_observability/: README.md  pyproject.toml
libs/python/nc_observability/src/nc_observability/: __init__.py
libs/python/nc_security/: README.md  pyproject.toml
libs/python/nc_security/src/nc_security/: __init__.py
ops/: owners.yaml
services/nc-mcp-server/: README.md  pyproject.toml
services/nc-mcp-server/src/nc_mcp_server/: __init__.py
services/nc-mcp-server/tests/: __init__.py
tests/: requirements.txt  test_service_imports.py
(+120 files in other folders)
